<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".mainpart.reminder.ReminderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:id="@+id/img_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/title_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rm_title_meal"
                android:layout_marginBottom="10dp"
                />
            <Switch
                android:id="@+id/switch_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rm_switch_meal"
                />
            <LinearLayout
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/breakfast_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/breakfast"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/edit_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lunch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lunch"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/edit_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/dinner_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dinner"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/edit_dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/snack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/snack_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/snack"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/edit_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:id="@+id/img_walk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/title_walk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rm_title_walk"
                android:layout_marginBottom="10dp"
                />
            <Switch
                android:id="@+id/switch_walk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rm_switch_walk"
                />

            <TextView
                android:id="@+id/walk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableStart="@drawable/ic_clock"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_clock" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_medical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:id="@+id/img_medical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/title_medical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rm_title_medical"
                android:layout_marginBottom="10dp"
                />
            <Switch
                android:id="@+id/switch_medical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rm_switch_medical"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>